--- a/tests/webgl.html
+++ b/tests/webgl.html
@@ -52,7 +52,8 @@
 		return data;	
 	}
 
-	function makeNoisyErrors(n){
+	function makeNoisyData(n){
+		var err = new Array(n);
 		var data = new Array(n);
 		var len = 8;
 		var std = 0.25;
@@ -71,9 +72,10 @@
 			else if(x >= xc-w2 && x <= xc+w2) y -= depth;
 			else if(x > xc+w2 && x <= xc+w2+dw) y -= depth*((xc+w2+dw)-x)/dw;
 			dy = 0.2*Math.max(0.5,Math.random());
-			data[i] = { 'x': x+(len/2), 'y1': y - dy, 'y2': y + dy };
+			err[i] = { 'x': x+(len/2), 'y1': y - dy, 'y2': y + dy };
+			data[i] = { 'x': x+(len/2), 'y': y };
 		}
-		return data;	
+		return {'data':data,'errors':err};	
 	}
 
 	function makeCurve(n){
@@ -97,6 +99,8 @@
 		}
 		return data;
 	}
+
+	lightcurve = makeNoisyData(1e3);
 
 	let layers = [{
 		'type': 'rule',
@@ -194,24 +198,30 @@
 		'style': {'fillStyle':'#b72268'}
 	},{
 		'type': 'symbol',
-		'size': 16,
-		'data': makeData(numperlayer),
-		'shape': 'M0,.5L.6,.8L.5,.1L1,-.3L.3,-.4L0,-1L-.3,-.4L-1,-.3L-.5,.1L-.6,.8L0,.5Z',
-		'style': {'strokeWidth':0,'strokeStyle':'rgba(255,103,0,0.5)','fillStyle':'rgba(249,188,38,1)'}
-	},{
-		'type': 'symbol',
 		'size': 1,
 		'data': makeData(numperlayer),
 		'shape': 'square',
 		'style': {'fillStyle':'rgba(249,0,0,1)'}
+	},{
+		'type': 'symbol',
+		'size': 10,
+		'data': makeData(numperlayer),
+		'shape': 'M0,.5L.6,.8L.5,.1L1,-.3L.3,-.4L0,-1L-.3,-.4L-1,-.3L-.5,.1L-.6,.8L0,.5Z',
+		'style': {'strokeWidth':0,'strokeStyle':'rgba(0,103,255,0.5)','fillStyle':'rgba(38,188,249,1)'}
 	},{
 		'type': 'line',
 		'data': makeNoisyCurve(1e4),
 		'style': {'strokeStyle':'rgb(20,210,200)','strokeWidth':2}
 	},{
 		'type': 'rect',
-		'data': makeNoisyErrors(1e3),
+		'data': lightcurve.errors,
 		'style': {'strokeWidth':'2','strokeStyle':'rgb(255,103,0)','fillStyle':'rgba(249,188,38,1)'}
+	},{
+		'type': 'symbol',
+		'size': 10,
+		'data': lightcurve.data,
+		'shape': 'cross',
+		'style': {'strokeWidth':0,'fillStyle':'rgb(255,103,0)'}
 	},{
 		'type': 'line',
 		'data': [{'x':0.0,'y':4.0},{'x':1,'y':5.0},{'x':2,'y':4.5},{'x':null,'y':null},{'x':3,'y':6.0},{'x':4,'y':7}],
@@ -284,6 +294,9 @@
 	<div class="holder">
 		<div class="left">
 			<canvas id="canvas" width="800" height="460">
+				Oh no! Your browser doesn't support canvas!
+			</canvas>
+			<canvas id="screenshot" width="800" height="460">
 				Oh no! Your browser doesn't support canvas!
 			</canvas>
 		</div>
