--- a/tests/webgl.html
+++ b/tests/webgl.html
@@ -100,7 +100,7 @@
 		return data;
 	}
 
-	lightcurve = makeNoisyData(1e3);
+	lightcurve = makeNoisyData(1e1);
 
 	let layers = [{
 		'type': 'rule',
@@ -130,7 +130,7 @@
 		'type': 'area',
 		'data': [{'x':0,'y1':0.5,'y2':1.0},{'x':1,'y1':1.0,'y2':1.5},{'x':2,'y1':0.9,'y2':1.3},{'x':3,'y1':1.2,'y2':1.6},{'x':null,'y1':null,'y2':null},{'x':6.0,'y1':1.3,'y2':1.8},{'x':8.0,'y1':1.2,'y2':1.9},{'x':9.0,'y1':0.7,'y2':1.5}],
 		'style': {'strokeStyle':'rgb(0,0,0)','strokeWidth':4,'fillStyle':'rgba(55,55,55,0.5)'}
-	},{
+	},/*{
 		'type': 'symbol',
 		'size': 16,
 		'shape': 'cross',
@@ -196,19 +196,19 @@
 		'shape': 'wedge',
 		'data': makeData(numperlayer),
 		'style': {'fillStyle':'#b72268'}
-	},{
+	},*/{
 		'type': 'symbol',
 		'size': 1,
-		'data': makeData(numperlayer),
+		'data': makeData(20),
 		'shape': 'square',
 		'style': {'fillStyle':'rgba(249,0,0,1)'}
-	},{
+	},/*{
 		'type': 'symbol',
 		'size': 10,
 		'data': makeData(numperlayer),
 		'shape': 'M0,.5L.6,.8L.5,.1L1,-.3L.3,-.4L0,-1L-.3,-.4L-1,-.3L-.5,.1L-.6,.8L0,.5Z',
 		'style': {'strokeWidth':0,'strokeStyle':'rgba(0,103,255,0.5)','fillStyle':'rgba(38,188,249,1)'}
-	},{
+	},*/{
 		'type': 'line',
 		'data': makeNoisyCurve(1e4),
 		'style': {'strokeStyle':'rgb(20,210,200)','strokeWidth':2}
